--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -107,14 +107,6 @@ nav ul li:hover{
     font-family: 'Alice', serif;
     color: $paleta-1;
 }
-.ambientes-portada__1{
-    grid-area: ambientes-portada__1;
-    width: 100%;
-    height: 100%;
-}
-.ambientes-portada__2{
-    grid-area: ambientes-portada__2;
-}
 #primer-paleta{
     grid-area: primer-paleta;
     background-color: $paleta-1;
@@ -122,38 +114,40 @@ nav ul li:hover{
     height: 10%;
 }
 #segunda-paleta{
+    @extend #primer-paleta;
     grid-area: segunda-paleta;
     background-color: $paleta-2;
-    width: 100%;
-    height: 10%;
 }
-.ambientes-portada__3{
+.ambientes-portada
+    &--1{
+    grid-area: ambientes-portada__1;
+    width: 100%;
+    height: 100%;
+}
+    &--2{
+    grid-area: ambientes-portada__2;
+}
+    &--3{
     grid-area: ambientes-portada__3;
     width: 100%;
     overflow: hidden;
-}
-.ambientes-portada__3{
     background-color: $paleta-3;
 }
-.ambientes-portada__4{
+    &--4{
     grid-area: ambientes-portada__4;
     width: 100%;
     overflow: hidden;
-}
-.ambientes-portada__4{
     background-color: $paleta-4;
 }
 #tercer-paleta{
+    @extend #primer-paleta;
     grid-area: tercer-paleta;
     background-color: $paleta-3;
-    width: 100%;
-    height: 10%;
 }
 #cuarta-paleta{
+    @extend #primer-paleta;
     grid-area: cuarta-paleta;
     background-color: $paleta-4;
-    width: 100%;
-    height: 10%;
 }
 /*ESTILOS servicios.html*/
 .cards-servicios{
